--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
     <footer class="content-section first-block-black footer">
         <img class="footer-copy" src="./img/logo.svg" alt="logo">
         <ul class="footer-links">
-            <li class="footer-links_item"><a href="#">
+            <li class="footer-links_item"><a href="##">
                 ВК
             </a></li>
-            <li class="footer-links_item"><a href="#">
+            <li class="footer-links_item"><a href="##">
                 Ютуб
             </a></li>
         </ul>
