--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <nav class="header_navigation">
             <a><img class="head-logo" src="./img/logo.svg" alt="logo"></a>
             <ul class="header_menu">
-                <li class="head-menu-links"><a href="#0">Главная</a></li>
-                <li class="head-menu-links"><a href="#">О нас</a></li>
-                <li class="head-menu-links"><a href="#">Контакты</a></li>
+                <li class="head-menu-links"><a href="##">Главная</a></li>
+                <li class="head-menu-links"><a href="##">О нас</a></li>
+                <li class="head-menu-links"><a href="##">Контакты</a></li>
             </ul>
         </nav>
     </header>
