--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="header_navigation">
             <a><img class="head-logo" src="./img/logo.svg" alt="logo"></a>
             <ul class="header_menu">
-                <li class="head-menu-links"><a href="#0">Главная</a></li>
+                <li class="head-menu-links"><a href="#">Главная</a></li>
                 <li class="head-menu-links"><a href="#">О нас</a></li>
                 <li class="head-menu-links"><a href="#">Контакты</a></li>
             </ul>
@@ -113,10 +113,10 @@
     <footer class="content-section first-block-black footer">
         <img class="footer-copy" src="./img/logo.svg" alt="logo">
         <ul class="footer-links">
-            <li class="footer-links_item"><a href="##">
+            <li class="footer-links_item"><a href="#">
                 ВК
             </a></li>
-            <li class="footer-links_item"><a href="##">
+            <li class="footer-links_item"><a href="#">
                 Ютуб
             </a></li>
         </ul>
