--- a/index.html
+++ b/index.html
@@ -7,35 +7,34 @@
     <title>С чистого листа</title>
 </head>
 <body>
-    <header class="content-section first-block-black">
-        <nav class="header_navigation">
-            <a><img class="head-logo" src="./img/logo.svg" alt="logo"></a>
-            <ul class="header_menu">
-                <li class="head-menu-links"><a href="#">Главная</a></li>
-                <li class="head-menu-links"><a href="#">О нас</a></li>
-                <li class="head-menu-links"><a href="#">Контакты</a></li>
-            </ul>
-        </nav>
+    <header class="content-section first-block-second">
+        <a><img class="head-logo" src="./img/logo.svg" alt="logo"></a>
+                <nav class="header_navigation">
+                    <ul class="header_menu">
+                         <li class="head-menu-links"><a href="#">Главная</a></li>
+                         <li class="head-menu-links"><a href="#">О нас</a></li>
+                         <li class="head-menu-links"><a href="#">Контакты</a></li>
+                    </ul>
+                </nav>
     </header>
-    <main class="content-section first-block-black">
+    <main class="content-section first-block-second cover">
         <h1 class="main-title">
             <span class="main-span">С</span>
             <span class="main-span text-center">чистого</span>
             <span class="main-span text-right">листа</span>
         </h1>
-    </main>
-    <section class="content-section first-block-black">
-        <header class="main-head">
+    <section class="content-section first-block-second">
+        <div class="main-head">
             <h2 class="begin-title">
                 8 способов борьбы со страхом чистого листа
             </h2>
             <time class="begin-date">05.06.2022 г.</time>
-        </header>
+        </div>
         <div class="begin-main-text">
             <p class="begin-main-text-type">
                 Начинать что-то новое — тяжело и страшно. Даже если это просто небольшой фрагмент кода. Или текст. Например, прежде чем написать здесь что-то вразумительное, автор(ка) этого материала заварила чай, позвонила бабушке узнать, как поживают на даче огурцы с помидорами (окей, это правда важно), 10 минут ходила туда-сюда по комнате, протёрла пыль на столе и заварила чай ещё раз, потому что он остыл. Всё это время с монитора на неё смотрел чистый лист.
             </p>
-            <p class="begin-main-text-type">
+            <p class="begin-main-text-type second">
                 Прокрастинировать перед тем, как начать что-то делать (особенно что-то новое) — нормальная реакция мозга. Разберёмся, почему это происходит.
             </p>
         </div>
@@ -48,25 +47,25 @@
         <p class="content-section-inter">
             Сам по себе чистый лист, конечно, не страшный. Боимся мы чаще всего объёма работы, которую предстоит сделать. Усилия, той точки, которую нужно преодолеть, чтобы переключить мозг из состояния паники в состояние потока. Причин, почему первые усилия даются так сложно, может быть очень много. Вот основные:
         </p>
-        <ul class="content-section-spisok">
-            <li class="content-section-spisok-item">
-                <div class="content-section-spisok-accent">Неуверенность в результате. </div>И в том, что его вообще можно достичь. Ведь как можно быть уверенным, что проводишь всю работу не впустую? Что доведёшь дело до конца? А тут, пока не начал, не надо и заканчивать.
+        <ul class="content-section-list">
+            <li class="content-section-list-item">
+                <div class="content-section-list-accent">Неуверенность в результате. </div>И в том, что его вообще можно достичь. Ведь как можно быть уверенным, что проводишь всю работу не впустую? Что доведёшь дело до конца? А тут, пока не начал, не надо и заканчивать.
             </li>
-            <li class="content-section-spisok-item">
-                <div class="content-section-spisok-accent">Страх критики. </div>Если работу будет кто-то оценивать, то уже на самых ранних этапах мы смотрим на неё глазами этого человека. Представляем, какие недостатки в ней можно найти. После этого желание что-то делать сразу пропадает.
+            <li class="content-section-list-item">
+                <div class="content-section-list-accent">Страх критики. </div>Если работу будет кто-то оценивать, то уже на самых ранних этапах мы смотрим на неё глазами этого человека. Представляем, какие недостатки в ней можно найти. После этого желание что-то делать сразу пропадает.
             </li>
-            <li class="content-section-spisok-item">
-                <div class="content-section-spisok-accent">Перфекционизм. </div>Когда кажется, что работа не будет сделана идеально, будто бы нет смысла её и начинать. В такие моменты мы можем забыть, что с первого раза что-то получается довольно редко.
+            <li class="content-section-list-item">
+                <div class="content-section-list-accent">Перфекционизм. </div>Когда кажется, что работа не будет сделана идеально, будто бы нет смысла её и начинать. В такие моменты мы можем забыть, что с первого раза что-то получается довольно редко.
             </li>
-            <li class="content-section-spisok-item">
-                <div class="content-section-spisok-accent">Отсутствие мотивации. </div>Как долгосрочной, так и краткосрочной. Например, если дедлайн только через неделю, можно посидеть пару часов, рассматривая узоры на обоях, — времени ещё вагон. Или прогуливать уроки химии в школе, потому что вроде как и хочется стать нейрохирургом, но в кино на «Мстителей» хочется ещё больше.
+            <li class="content-section-list-item">
+                <div class="content-section-list-accent">Отсутствие мотивации. </div>Как долгосрочной, так и краткосрочной. Например, если дедлайн только через неделю, можно посидеть пару часов, рассматривая узоры на обоях, — времени ещё вагон. Или прогуливать уроки химии в школе, потому что вроде как и хочется стать нейрохирургом, но в кино на «Мстителей» хочется ещё больше.
             </li>
-            <li class="content-section-spisok-item">
-                <div class="content-section-spisok-accent">Недостаток информации. </div>Начинать что-то особенно сложно, если вы новичок в теме и только разбираетесь, что к чему. Вам может казаться, что каждая строчка — глупость, и вообще всё, что вы сделаете, — будет неправильно.
+            <li class="content-section-list-item">
+                <div class="content-section-list-accent">Недостаток информации. </div>Начинать что-то особенно сложно, если вы новичок в теме и только разбираетесь, что к чему. Вам может казаться, что каждая строчка — глупость, и вообще всё, что вы сделаете, — будет неправильно.
             </li>
         </ul>
     </section>
-    <section class="content-section first-block-black">
+    <section class="content-section first-block-second">
         <h1 class="content-section-title">
             <span class="main-span text-right">Как всё-таки начать</span>
             <span class="main-span">что-то делать</span>
@@ -95,7 +94,7 @@
                     </div>
                 </article>
             </li>
-            <li class="card-list-items">
+            <li class="card-list-items" style="padding-bottom: 32px;">
                 <article class="card card-theme-black">
                     <div>
                         <img class="card-avtor-photo" src="./img/bunin.png" alt="bunin_portrait">
@@ -109,9 +108,10 @@
             </li>
         </ul>
     </section>
-    <section class="content-section first-block-black"></section>
-    <footer class="content-section first-block-black footer">
-        <img class="footer-copy" src="./img/logo.svg" alt="logo">
+    <section class="content-section first-block-second"></section>
+</main>
+    <footer class="content-section first-block-second footer">
+        <span>© VЁRSTKA</span>
         <ul class="footer-links">
             <li class="footer-links_item"><a href="#">
                 ВК
